Cleanup window class